[metadata]
name = github_nonpublic_api
description_file =
    README.md
author = Bill Napier
author_email = napier@google.com
home_page = https://github.com/google/github_nonpublic_api
summary = This project is developing a python library that can be used to access 'NonPublic' parts of the GitHub API.
license = Apache-2
python_requires = >=3.8
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    github_nonpublic_api